// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default Date 1`] = `
.c0 {
  width: 300px;
  padding: 30px 30px 44px;
  border: 1px solid #ddd;
}

.c1 {
  width: 300px;
}

.c2 {
  font-size: 12px;
}

.c3 {
  text-align: center;
  margin-bottom: 24px;
}

.c4 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c4:hover {
  color: #9482ff;
}

.c8 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c8:hover {
  color: #9482ff;
}

.c6 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: 20px;
  vertical-align: middle;
}

.c6:hover {
  color: #9482ff;
}

.c9 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: 20px;
  vertical-align: middle;
}

.c9:hover {
  color: #9482ff;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c7 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
}

.c7:hover {
  color: #9482ff;
}

.c12 {
  font-size: 12px;
}

.c10 {
  padding: 0;
  margin: 0;
  margin-bottom: 12px;
}

.c11 {
  border: 1px solid transparent;
  display: inline-block;
  width: 40.857142857142854px;
  height: 40.857142857142854px;
  text-align: center;
  line-height: 40.857142857142854px;
  cursor: pointer;
}

.c13 {
  display: inline-block;
  width: 3.5714285714285716em;
  text-align: center;
  vertical-align: middle;
}

.c13:nth-child(NaN)>i {
  background: #684fff;
  color: #fff;
  border-radius: 50%;
}

.c14 {
  font-style: normal;
  border: 1px solid transparent;
  display: inline-block;
  width: 2.166666666666667em;
  height: 2.166666666666667em;
  text-align: center;
  line-height: 2.166666666666667em;
  vertical-align: middle;
  cursor: pointer;
  color: #ccc;
}

.c14:hover {
  background: #9482ff;
}

.c15 {
  font-style: normal;
  border: 1px solid transparent;
  display: inline-block;
  width: 2.166666666666667em;
  height: 2.166666666666667em;
  text-align: center;
  line-height: 2.166666666666667em;
  vertical-align: middle;
  cursor: pointer;
  color: #666;
}

.c15:hover {
  background: #9482ff;
}

<div
  className="c0"
  width={300}
>
  <div
    className="c1"
    width={300}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_double_right  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          2018
          年
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          9
          月
        </span>
        <span
          className="c8"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_double_left  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c9"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c5"
            onClick={undefined}
          />
        </span>
      </div>
      <ul
        className="c10"
      >
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          日
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          一
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          二
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          三
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          四
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          五
        </li>
        <li
          className="c11"
          onClick={[Function]}
          width={300}
        >
          六
        </li>
      </ul>
    </div>
    <div
      className="c12"
    >
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          26
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          27
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          28
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          29
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          30
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          31
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          1
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          2
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          3
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          4
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          5
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          6
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          7
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          8
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          9
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          10
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          11
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          12
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          13
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          14
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          15
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          16
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          17
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          18
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          19
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          20
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          21
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          22
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          23
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          24
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          25
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          26
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          27
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          28
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          29
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c15"
          onClick={[Function]}
          width={300}
        >
            
          30
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          1
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          2
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          3
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          4
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          5
        </i>
      </span>
      <span
        className="c13"
        onMouseOut=""
        onMouseOver=""
        width={300}
      >
        <i
          className="c14"
          onClick={[Function]}
          width={300}
        >
            
          6
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Month 1`] = `
.c0 {
  width: 300px;
  padding: 30px 30px 44px;
  border: 1px solid #ddd;
}

.c1 {
  width: 300px;
}

.c2 {
  font-size: 12px;
}

.c3 {
  text-align: center;
  margin-bottom: 24px;
}

.c4 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c4:hover {
  color: #9482ff;
}

.c7 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c7:hover {
  color: #9482ff;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c6 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
}

.c6:hover {
  color: #9482ff;
}

.c8 {
  font-size: 12px;
}

.c9 {
  display: inline-block;
  width: 25%;
  line-height: 3.3333333333333335em;
  font-size: 14px;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c9:hover {
  color: #9482ff;
}

.c10 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
}

.c11 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
  width={300}
>
  <div
    className="c1"
    width={300}
  >
    <div
      className="c2"
      width={200}
    >
      <div
        className="c3"
      >
        <span
          className="c4"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          2018
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c5"
            onClick={undefined}
          />
        </span>
      </div>
    </div>
    <div
      className="c8"
    >
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          一月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          二月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          三月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          四月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          五月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          六月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          七月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          八月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c11"
        >
          九月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          十月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          十一月
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          十二月
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Weeks 1`] = `
.c0 {
  width: 300px;
  padding: 30px 30px 44px;
  border: 1px solid #ddd;
}

.c1 {
  width: 300px;
}

.c2 {
  font-size: 12px;
}

.c3 {
  text-align: center;
  margin-bottom: 24px;
}

.c4 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c4:hover {
  color: #9482ff;
}

.c7 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c7:hover {
  color: #9482ff;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c6 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
}

.c6:hover {
  color: #9482ff;
}

.c8 {
  font-size: 12px;
}

.c9 {
  display: inline-block;
  width: 25%;
  line-height: 3.3333333333333335em;
  font-size: 14px;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c9:hover {
  color: #9482ff;
}

.c10 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
}

.c11 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
  width={300}
>
  <div
    className="c1"
    width={300}
  >
    <div
      className="c2"
      width={200}
    >
      <div
        className="c3"
      >
        <span
          className="c4"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          2018
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          -37-48周
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c5"
            onClick={undefined}
          />
        </span>
      </div>
    </div>
    <div
      className="c8"
    >
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第37周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c11"
        >
          第38周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第39周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第40周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第41周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第42周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第43周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第44周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第45周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第46周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第47周
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第48周
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Year 1`] = `
.c0 {
  width: 300px;
  padding: 30px 30px 44px;
  border: 1px solid #ddd;
}

.c1 {
  width: 300px;
}

.c2 {
  font-size: 12px;
}

.c3 {
  text-align: center;
  margin-bottom: 24px;
}

.c4 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c4:hover {
  color: #9482ff;
}

.c7 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c7:hover {
  color: #9482ff;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c6 {
  color: #333;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
}

.c6:hover {
  color: #9482ff;
}

.c8 {
  font-size: 12px;
}

.c9 {
  display: inline-block;
  width: 25%;
  line-height: 3.3333333333333335em;
  font-size: 14px;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c9:hover {
  color: #9482ff;
}

.c10 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
}

.c11 {
  padding: 5px 10px;
  font-style: normal;
  border-radius: 3px;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
  width={300}
>
  <div
    className="c1"
    width={300}
  >
    <div
      className="c2"
      width={200}
    >
      <div
        className="c3"
      >
        <span
          className="c4"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c5"
            onClick={undefined}
          />
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          2017-2028
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c5"
            onClick={undefined}
          />
        </span>
      </div>
    </div>
    <div
      className="c8"
    >
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2017
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c11"
        >
          2018
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2019
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2020
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2021
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2022
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2023
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2024
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2025
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2026
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2027
        </i>
      </span>
      <span
        className="c9"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2028
        </i>
      </span>
    </div>
  </div>
</div>
`;
